--- a/templates/setting.html
+++ b/templates/setting.html
@@ -44,7 +44,7 @@
                         <p></p>
                     </div>
                     <div class="bg-white rounded-md lg:shadow-lg shadow col-span-2">
-                    <form action="" method="POST">
+                    <form action="" method="POST" enctype="multipart/form-data">
                         {% csrf_token %}
                        <div class="grid grid-cols-2 gap-3 lg:p-6 p-4">
                            <!-- <div>
@@ -70,7 +70,7 @@
                             </div> 
                             <div class="col-span-2">
                                 <label for=""> Location</label>
-                                <input type="text" name='loactaion' value="{{user_profile.location}}" class="shadow-none bg-gray-100">
+                                <input type="text" name='location' value="{{user_profile.location}}" class="shadow-none bg-gray-100">
                             </div>
                             <!-- <div>
                                <label for=""> Working at</label>
