customize feed list

--- a/templates/index.html
+++ b/templates/index.html
@@ -201,10 +201,10 @@
                                             <img src="{% static 'assets/images/avatars/avatar-2.jpg' %}" class="bg-gray-200 border border-white rounded-full w-8 h-8">
                                         </div> -->
                                     </a>
-                                    <span class="block capitalize font-semibold "><a href="#">@{{post.user}}</a></span>
+                                    <span class="block capitalize font-semibold "><a href="/profile/{{post.user}}">@{{post.user}}</a></span>
                                 </div>
                               <div>
-                                <a href="#"> <i class="icon-feather-more-horizontal text-2xl hover:bg-gray-200 rounded-full p-2 transition -mr-1 "></i> </a>
+                                <a href=""> <i class="icon-feather-more-horizontal text-2xl hover:bg-gray-200 rounded-full p-2 transition -mr-1 "></i> </a>
                                 <div class="bg-white w-56 shadow-md mx-auto p-2 mt-12 rounded-md text-gray-500 hidden text-base border border-gray-100  " uk-drop="mode: hover;pos: top-right">
                               
                                     <ul class="space-y-1">
@@ -280,7 +280,7 @@
                                     </a>
                                 </div>
                                 <p>
-                                    <a href="#"><strong>{{post.user}}</strong> {{post.caption}}</a>
+                                    <a href="/profile/{{post.user}}"><strong>{{post.user}}</strong> {{post.caption}}</a>
                                 </p>
                                 <!-- <div class="flex items-center space-x-3"> 
                                     <div class="flex items-center">
